--- a/workflow/config.yaml
+++ b/workflow/config.yaml
@@ -98,6 +98,59 @@ subsampling:
       seq_per_group: 20
       query: --query "(region == 'Europe') & (country not in ['Italy', 'France', 'Germany', 'Spain']) & (date<='2020-03-08')"
 
+demes:
+  # Focal demes
+  France:
+    demeID: 0
+    country: "France"
+    region: "Europe"
+    from: "2020-01-23"
+    to: "2020-03-08"
+    n_seq: 50
+    focal: 1
+  Germany:
+    demeID: 1
+    country: "Germany"
+    region: "Europe"
+    from: "2020-01-28"
+    to: "2020-03-08"
+    n_seq: 50
+    focal: 1
+  Hubei:
+    demeID: 2
+    division: "Hubei"
+    country: "China"
+    region: "Asia"
+    from: "2019-12-24"
+    to: "2020-01-23"
+    n_seq: 30
+    focal: 1
+  Italy:
+    demeID: 3
+    country: "Italy"
+    region: "Europe"
+    from: "2020-01-29"
+    to: "2020-03-08"
+    n_seq: 60
+    focal: 1
+  Spain:
+    demeID: 4
+    country: "Spain"
+    region: "Europe"
+    from: "2020-02-24"
+    to: "2020-03-08"
+    n_seq: 40
+    focal: 1
+  # Contextual deme
+  OtherEuropean:
+    demeID: 5
+    region: "Europe"
+    from: "2020-01-29"
+    to: "2020-03-08"
+    n_seq: 20
+    focal: 0
+    
+
 tree:
   tree-builder-args: "'-ninit 10 -n 4'"
 
@@ -128,12 +181,14 @@ beast:
   burnin: 0.1
   # Log analyser bin
   log_analyser: loganalyser
+  min_ess: 200
   # Inlcude all trace, tree and traj files even with ESS < 200 in the analysis
   include_all: 1
   # Log combiner bin
   log_combiner: logcombiner
   # Tree annotator bin
   tree_annotator: treeannotator
+  mcc_heights: "mean"
   # Trajectory Mapper xml
   trajectoryMapper: "201014_europe2.trajectoryMapper.xml"
 
